# fsi-gcp-usecase-factory

./: .dockerignore  .gcloudignore  .gitignore  .mcp.json  AUTHORING.md  CLAUDE.md  KNOWN_ISSUES.md  Makefile  portfolio.yaml  pytest.ini
.claude/: settings.json
.claude/agents/: agent-specialist-builder.md  agent-supervisor-builder.md  agent-validator.md  archetype-builder.md  architecture-auditor.md  atomic-service-builder.md  compliance-doc-builder.md  compliance-reviewer.md  console-config-builder.md  cross-impact-analyzer.md  demo-data-builder.md  deploy-validator.md  e2e-test-builder.md  handler-builder.md  jdm-rule-builder.md  prompt-author.md  rule-validator.md  security-reviewer.md  service-validator.md  terraform-author.md  test-author.md  workflow-builder.md
.claude/hooks/: pre-commit-arch-audit.json  pre-commit-arch-audit.sh  session-start-context.json  session-start-context.sh
.claude/mcp/: .gitignore  README.md  package.json
.claude/schemas/: onboarding.schema.yaml  option-manifest.schema.yaml  ui-decision.schema.yaml
.claude/skills/new-atomic-service/template/: Dockerfile  main.py  manifest.json  pyproject.toml  service.tf
.claude/skills/new-atomic-service/template/tests/: test_main.py
.github/workflows/: framework-tests.yml
archives/: README.md
archives/design-tests/: README.md
docs/: SLEEP_REPORT.md
docs/demo/: scenarios.md
docs/methodology/: README.md  agentic-ui-principles.md  architecture.md  brief-authoring.md  console_reference.md  cutover-runbook-credit-memo-v2.md  factory-capabilities.md  factory-cookbook.md  factory-coverage.md  methodology.md  model-prerequisites.md  onboard-new-use-case.md  onboarding-walkthrough.md  playwright-validation.md  product-build-discipline.md  ui-authoring.md  ui-standards.md  using-the-factory.md  ux-first-discipline.md
evals/prompts/: judge_depth.md
evals/results/: 20260510T141237__before-track-2.json  20260510T141316__before-track-2.json
evals/scorers/: __init__.py  llm_judge.py  structural.py  types.py
infra/dev/: README.md  main.tf  terraform.tfvars  variables.tf
infra/prod/: README.md  main.tf  terraform.tfvars.example  variables.tf
infra/shared/: cloud_sql.tf  network.tf  outputs.tf  providers.tf  schema.sql  terraform.tfvars.example  variables.tf
infra/staging/: README.md  main.tf  providers.tf
infra/templates/: design-proposal-cloudbuild.yaml
libraries/personas/: README.md  branch-manager.yaml  bsa-officer.yaml  cco.yaml  compliance-officer.yaml  credit-analyst.yaml  customer-service-rep.yaml  fraud-analyst.yaml  internal-auditor.yaml  loan-servicer.yaml  (+8 more)
onboarding/: cecl-quarterly-run-test.yaml  cre-surveillance-test.yaml  credit-memo-commercial-test.yaml  nba-recommendations-test.yaml  payment-fraud-scoring-test.yaml  sar-investigation-test.yaml
policies/: README.md  encryption.rego  encryption_test.rego  iam.rego  iam_test.rego  jdm_schema.json  mcp_manifest_schema.json  networking.rego  networking_test.rego  observability.rego  observability_test.rego  reasons_schema.json  tagging.rego  tagging_test.rego
scripts/: README.md  build_design_comparator.mjs  build_meta_comparator.mjs  check_a11y_per_option.mjs  check_reuse_floor.mjs  check_reuse_rate.mjs  cleanup_design_proposals.sh  demo_live_simulator.py  deploy_preview.sh  deploy_service.sh  deploy_use_case.sh  derive_legacy_canvas.mjs  dev_up.sh  eval_diff.py  generate_mock_canvas_data.mjs  jdm_lint.sh  lint_agent_calls.py  lint_assert_env.py  lint_event_spine_present.mjs  lint_idempotency_guard.py  lint_lessons_have_gates.py  lint_no_json_in_prose.py  lint_toolkit.sh  lint_uc_in_console.mjs  lint_ui_defensive.mjs  lint_ui_design_standards.mjs  parity_v1_v2.py  policy_check.sh  provision_preview.sh  render_brief_md.mjs  repair_memos.py  resolve_reasons_refs.py  run_evals.py  run_full_lifecycle_v2.py  run_golden_tests.py  run_local.sh  scan_factory_for_reuse.mjs  setup_dev_infra.sh  smoke_e2e.sh  smoke_test_service.sh  (+17 more)
services/atomic/document-extractor/: Dockerfile  audit.py  main.py  manifest.json  pyproject.toml  requirements_loader.py  schemas.py
services/atomic/document-extractor/tests/: README.md  conftest.py  test_live_audit_completeness.py  test_live_cost_and_latency.py  test_live_landing_ai.py  test_live_round_trip.py  test_requirements_validation.py  test_schemas.py
services/atomic/document-extractor/tests/fixtures/: download.sh
services/atomic/document-extractor/tests/golden/: 10-K.stub.json  AR_aging.stub.json  board_minutes.stub.json
services/atomic/document-extractor/vendors/: __init__.py  landing_ai.py  liteparse_gemini.py  stub.py  types.py
services/atomic/industry-risk-scorer/: main.py  manifest.json  pyproject.toml
services/atomic/industry-risk-scorer/tests/: smoke_payload.json  test_main.py
services/audit-writer/: Dockerfile  main.py  manifest.json  pyproject.toml
services/audit-writer/tests/: test_audit_writer.py
services/orchestrator-credit-memo/: main.py  manifest.json  pyproject.toml
services/orchestrator-credit-memo-v2/: Dockerfile  main.py  pyproject.toml
services/orchestrator-credit-memo/tests/: conftest.py  test_main.py
services/rules-service/: main.py  manifest.json  pyproject.toml
services/rules-service/tests/: conftest.py  smoke_payload.json  test_main.py
tests/framework/builders/fixtures/atomic_service_builder/case_loan_to_value_calc/golden_output/services/atomic/loan-to-value-calc/: main.py  manifest.json  pyproject.toml
tests/framework/builders/fixtures/atomic_service_builder/case_loan_to_value_calc/golden_output/services/atomic/loan-to-value-calc/tests/: smoke_payload.json  test_main.py
ui/: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
usecases/credit-memo-commercial/handler/: Procfile  main.py  manifest.json  pyproject.toml
usecases/credit-memo-commercial/handler/tests/: smoke_payload.json  test_main.py
usecases/credit-memo-commercial/sinks/gl-posting/: Dockerfile  main.py  manifest.json  pyproject.toml
usecases/credit-memo-commercial/sinks/gl-posting/tests/: conftest.py  smoke_payload.json  test_main.py
(+1315 files in other folders)
