[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-credit-memo-v2"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.5",
    "google-genai>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
