[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-credit-memo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.5",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "jsonschema>=4.20",
    "sqlalchemy>=2.0",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.9",
    "google-cloud-pubsub>=2.21",
    "google-auth>=2.30",
    "requests>=2.32",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-gcp-trace>=1.6",
    "google-cloud-logging>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = false
ignore_missing_imports = true
