[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.5",
    "zen-engine>=0.26",
    "google-cloud-logging>=3.10",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-gcp-trace>=1.6",
    "sqlalchemy>=2.0",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff.lint]
select = ["E", "F", "I"]
