[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-posting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.5",
    "google-cloud-logging>=3.10",
    "opentelemetry-sdk>=1.24",
    "sqlalchemy>=2.0",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]
prod = []

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true
