[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-to-value-calc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "functions-framework>=3.5",
  "sqlalchemy>=2.0",
  "pg8000>=1.31",
  "cloud-sql-python-connector[pg8000]>=1.9",
  "opentelemetry-sdk>=1.24",
]
